Updated dashboard functionality and UI, added export feature

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+    "EmailSettings": {
+      "SmtpServer": "smtp.gmail.com",
+      "SmtpPort": 587,
+      "SenderEmail": "deil.ondir@gmail.com",
+      "SenderPassword": "Tirana2021",
+      "RecipientEmail": "ira.bilo30@gmail.com"
+    }
+  
 }
